dfir_rs/tests/compile-fail-stable/surface_syntax_paren_indexing.rs
../compile-fail/surface_syntax_paren_indexing.rs